tests/snapshots/markdown__correctly_wraps_long_commit_body.snap
---
source: tests/markdown.rs
expression: result
---
## New Features
- b389a93d63a5b741b389a93d63a5b741b389a93d feat: now is the winter of our discontent

  Made glorious summer by this sun of York; and all the clouds that lour'd upon
  our house in the deep bosom of the ocean buried. Now are our brows bound with
  victorious wreaths; our bruised arms hung up for monuments; our stern alarums
  changed to merry meetings, our dreadful marches to delightful measures. Grim-
  visaged war hath smooth'd his wrinkled front; and now, instead of mounting
  barded steeds to fright the souls of fearful adversaries, he capers nimbly in a
  lady's chamber to the lascivious pleasing of a lute.

*Generated with [release-note](https://github.com/purpleclay/release-note)*
