tests/snapshots/markdown__displays_contributors_with_github_commit_links.snap
---
source: tests/markdown.rs
expression: result
---
## v1.0.0 - November 27, 2025

[**`3`**](#new-features) new features

## Contributors
- <img src="https://avatars.githubusercontent.com/u/2651292?v=4&size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@shakespeare ([**`2`**](https://github.com/shakespeare/globe-theatre/commits/v1.0.0?author=shakespeare&since=2025-05-28&until=2025-05-29) commits)
- <img src="https://avatars.githubusercontent.com/u/2651292?v=4&size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@marlowe ([**`1`**](https://github.com/shakespeare/globe-theatre/commits/v1.0.0?author=marlowe&since=2025-05-28&until=2025-05-28) commit)

## New Features
- [**`a86272b`**](https://github.com/shakespeare/globe-theatre/commit/a86272be496b592fa86272be496b592fa86272be) the course of true love never did run smooth (@shakespeare)
- [**`c82cb95`**](https://github.com/shakespeare/globe-theatre/commit/c82cb9580ca797b8c82cb9580ca797b8c82cb958) some Cupid kills with arrows, some with traps (@shakespeare)
- [**`8c8a505`**](https://github.com/shakespeare/globe-theatre/commit/8c8a505c3365cb6c8c8a505c3365cb6c8c8a505c) all the world's a stage (@marlowe)

*Generated with [release-note](https://github.com/purpleclay/release-note)*
