tests/snapshots/markdown__displays_contributors_without_links_for_gitlab.snap
---
source: tests/markdown.rs
expression: result
---
## v1.0.0 - November 27, 2025

[**`1`**](#new-features) new feature

## Contributors
- <img src="https://gitlab.com/uploads/-/system/user/avatar/123/avatar.png?size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@hamlet (**`3`** commits)
- <img src="https://gitlab.com/uploads/-/system/user/avatar/456/avatar.png?size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@ophelia (**`1`** commit)

## New Features
- [**`8c8a505`**](https://gitlab.com/shakespeare/globe-theatre/-/commit/8c8a505c3365cb6c8c8a505c3365cb6c8c8a505c) all the world's a stage

*Generated with [release-note](https://github.com/purpleclay/release-note)*
