tests/snapshots/markdown__displays_multiple_contributors.snap
---
source: tests/markdown.rs
expression: result
---
## HEAD - November 27, 2025

[**`2`**](#new-features) new features

## Contributors
- <img src="https://avatars.githubusercontent.com/u/2651292?v=4&size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@shakespeare (**`2`** commits)
- <img src="https://avatars.githubusercontent.com/u/2651292?v=4&size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@jonson (**`1`** commit)
- <img src="https://avatars.githubusercontent.com/u/2651292?v=4&size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@marlowe (**`1`** commit)

## New Features
- **`f7195de`** we are such stuff as dreams are made on (@shakespeare, @marlowe, @jonson)
- **`c82cb95`** some Cupid kills with arrows, some with traps (@shakespeare)

*Generated with [release-note](https://github.com/purpleclay/release-note)*
