tests/snapshots/markdown__escapes_table_metacharacters_in_dependency_update_cell.snap
---
source: tests/markdown.rs
expression: result
---
## HEAD - November 27, 2025
## Dependency Updates

| Commit | Update | Contributors |
|--------|--------|--------------|
| **`0fb63d0`** | bump foo \| bar from 1.0.0 to 2.0.0 | @renovate[bot] |

*Generated with [release-note](https://github.com/purpleclay/release-note)*
