tests/snapshots/markdown__excludes_git_trailers.snap
---
source: tests/markdown.rs
expression: result
---
## November 27, 2025

[**`2`**](#new-features) new features • [**`1`**](#bug-fixes) bug fixed

## New Features
- 2c834bf8cfb379582c834bf8cfb379582c834bf8 the lady doth protest too much, methinks

  Though this be madness, yet there is method in't.
- 51eafb29bc0a294f51eafb29bc0a294f51eafb29 brevity is the soul of wit

  To be, or not to be, that is the question:
  - Whether 'tis nobler in the mind to suffer
  - The slings and arrows of outrageous fortune

  Or to take arms against a sea of troubles.
## Bug Fixes
- 57b850ba6d18ab8157b850ba6d18ab8157b850ba something is rotten in the state of Denmark

  The rest is silence.

*Generated with [release-note](https://github.com/purpleclay/release-note)*
