tests/snapshots/markdown__filters_bot_contributors.snap
---
source: tests/markdown.rs
expression: result
---
## HEAD - November 27, 2025

[**`2`**](#new-features) new features

## Contributors
- <img src="https://avatars.githubusercontent.com/u/2651292?v=4&size=20&width=20" width="20" height="20" align="center">&nbsp;&nbsp;@shakespeare (**`1`** commit)

## New Features
- **`a86272b`** the course of true love never did run smooth (@shakespeare)
- **`c74221d`** a plague o' both your houses (@iago[bot])

*Generated with [release-note](https://github.com/purpleclay/release-note)*
